Grab and use users' image

--- a/app/views/post/index.html.erb
+++ b/app/views/post/index.html.erb
@@ -9,7 +9,7 @@
   <div class="subParentContent">
   <div class="contentIconName"> 
     <div class="contentIcon">
-       <%= image_tag "icon.png", alt: "adadasda", class: "contentIcon" %>  
+      <img src=<%= @user.photo %> alt:"User Display Image" class="contentIcon" />
     </div> 
     <div class="contentNamePost">
       <h2 class="name">
