--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -12,7 +12,7 @@
     <% @user.tap do |user| %>
     <div class="contentIconName">
       <div class="contentIcon">
-        <%= image_tag "icon.png" , alt: "adadasda" , class: "contentIcon" %>
+        <img src=<%= user.photo %> alt:"User Display Image" class="contentIcon" />
       </div>
       <div class="contentNamePost">
         <h2 class="name"><%= user.name %></h2>
