Add correct route for See All Posts button

--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -38,7 +38,7 @@
       </li>
       <% end %>
     </ul>
-    <%= link_to "<button>See All Posts</button>".html_safe, :post => @user.posts, :class => 'seeAllpostsButton' %>
+    <%= link_to "<button>See All Posts</button>".html_safe, show_posts_url(@user), :class => 'seeAllpostsButton' %>
   </div>
   </div>
 </body>
