Map post title and post.author.name

--- a/app/views/post/show.html.erb
+++ b/app/views/post/show.html.erb
@@ -8,7 +8,8 @@
   <body>
     <div class="postComment">
       <div class="postSection">
-        <h2 class="numPost">Post <%= @post.id %></h2>
+        <h1 class="numPost">Post <%= @post.id %> by <%= @post.author.name %></h1>
+        <h2 class="numPost">Title: <%= @post.title %></h2>
         <h3 class="comLikesPost">Comments: <%= @post.comments_counter %>, Likes: <%= @post.likes_counter %></h3>
         <p class="textPost">
           <%= @post.text %>
