Redirect back button to index posts instead of show posts

--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -6,6 +6,6 @@
   <%= form.submit "Add new comment" %>
   <% end %>
   <div>
-   <%= link_to "<button>Go Back</button>".html_safe, show_posts_path, :class => 'seeAllpostsButton' %>
+   <%= link_to "<button>Go Back</button>".html_safe, index_posts_path, :class => 'seeAllpostsButton' %>
   </div>
 </div>
