--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -39,8 +39,7 @@
       <% end %>
     </ul>
     <%= link_to "<button>Add Post</button>".html_safe, add_post_path, :class => 'seeAllpostsButton' %>
-    <%= link_to "<button>See All Posts</button>".html_safe, index_posts_url(:user_id => @user.id), :class => 'seeAllpostsButton' %>
-    <button>Pagination</button>
+    <%= link_to "<button>See All Posts</button>".html_safe, show_posts_url(@user), :class => 'seeAllpostsButton' %>
   </div>
   </div>
 </body>
