Generate devise, Implement authentication and migrate new files

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,5 +12,8 @@
 
   <body>
     <%= yield %>
+    <!-- This is an action to alert the user for login/signed in and log out messages -->
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
   </body>
 </html>
