Finish devise implementation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+    <%= render "shared/logout" %>
     <%= yield %>
     <!-- This is an action to alert the user for login/signed in and log out messages -->
     <p class="notice"><%= notice %></p>
