--- a/app/views/shared/_logout.html.erb
+++ b/app/views/shared/_logout.html.erb
@@ -1,1 +1,1 @@
-<%= button_to "Log out", destroy_user_session_path, method: :delete, data: { turbo: false }  %>
+<%= button_to "Log out", destroy_user_session_path, method: :delete, data: { turbo: false }, :class => 'auth-btns'  %>
